-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.0, 6.7.1
-
None
-
-
59c784dff (dev), a2c4e5cdc (6.7)
MacOS 14.4.1
Qt Creator 13.0.0
Qt 6.7.0/6.7.1
Steps to reproduce:
- Open document viewer example.
- Open any txt file.
- Check the printer icon and option -> printing available.
- Open any other txt file
- Check the printer icon and option -> printing inactive
Expected: Printing should be available.
Actual: Printing is disabled, but after cutting out the text, writing some characters and pasting the content it's enabled and I can print the whole file.
Reproducibility: 100%
- relates to
-
QTQAINFRA-6225
Qt Test Attack - Q2, 2024
-
- Open
-